[tool.poetry]
name = "count-von-count"
version = "0.0.1"
description = "Finds the largest number in a pdf document"
authors = ["nolandseigler <57370691+nolandseigler@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "count_von_count"}]

[tool.poetry.dependencies]
python = "^3.12"
spacy = "^3.7.6"
pypdf = {extras = ["full"], version = "^4.3.1"}
fastapi = "^0.114.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
gunicorn = "^23.0.0"
structlog = "^24.4.0"
python-multipart = "^0.0.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-timeout = "^2.3.1"
pytest-memray = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
